--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   http: ^0.13.4
   google_fonts: ^3.0.1
   flutter_svg: ^1.0.3
+  timer_builder: ^2.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
