--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   google_fonts: ^3.0.1
   flutter_svg: ^1.0.3
   timer_builder: ^2.0.0
+  intl: ^0.17.0
 
 
   # The following adds the Cupertino Icons font to your application.
